Fixed issue where background video would play on mobile

--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -3705,11 +3705,9 @@ header .scroll-down.animate {
     align-items: center;
     flex-direction: column;
     margin: 0;
-    padding: 1rem;
+    padding: 0;
     width: 100%;
     text-align: center;
-    left: 50%;
-    opacity: 0;
     -webkit-user-select: none;
     /* Chrome all / Safari all */
     -moz-user-select: none;
@@ -3717,11 +3715,9 @@ header .scroll-down.animate {
     -ms-user-select: none;
     /* IE 10+ */
     user-select: none;
-    /* Likely future */ }
+    /* Likely future */
+    opacity: 0; }
     .instagramFeed .post .postLinks .info .likes {
-      width: 100%;
-      margin: 0;
-      margin-top: 5px;
       font-family: "Fira Sans", Helvetica, sans-serif;
       font-weight: 600;
       text-rendering: optimizeLegibility;
