--- a/src/assets/styles/scss/custom/components/instagramFeed.scss
+++ b/src/assets/styles/scss/custom/components/instagramFeed.scss
@@ -65,19 +65,15 @@
                 align-items: center;
                 flex-direction: column;
                 margin: 0;
-                padding: 1rem;
+                padding: 0;
                 width: 100%;
                 text-align: center;
-                left: 50%;
-                opacity: 0;
                 -webkit-user-select: none;  /* Chrome all / Safari all */
                 -moz-user-select: none;     /* Firefox all */
                 -ms-user-select: none;      /* IE 10+ */
                 user-select: none;          /* Likely future */
+                opacity: 0;
                 .likes {
-                    width: 100%;
-                    margin: 0;
-                    margin-top: 5px;
                     @include font($firaSans, 600);
                     letter-spacing: 0.03em;
                     .fa {
